This commit was manufactured by cvs2svn to create tag 'SN-511-2002-09-11'.

--- a/snavigator/sdk/api/c/Makefile.in
+++ b/snavigator/sdk/api/c/Makefile.in
@@ -415,9 +415,9 @@ mostlyclean distclean maintainer-clean
 
 
 install-data-local:
-	$(mkinstalldirs) $(DESTDIR)$(sdkincludedir)
+	$(mkinstalldirs) $(sdkincludedir)
 	for h in $(sdkinclude_h) ; do \
-	    cp $(top_srcdir)/../db/include/$$h $(DESTDIR)$(sdkincludedir) ;\
+	    cp $(top_srcdir)/../db/include/$$h $(sdkincludedir) ;\
 	done
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
