--- a/snavigator/configure.in
+++ b/snavigator/configure.in
@@ -4,7 +4,7 @@ dnl Initialization.
 AC_INIT(hyper/sninit.c)
 AC_PREREQ(2.12.2)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(sn,5.1.0)
+AM_INIT_AUTOMAKE(sn,5.1.1)
 AM_MAINTAINER_MODE
 
 dnl Constants.  These _must_ come after the AC_INIT macro invocation.
@@ -499,9 +499,9 @@ fi
 AC_SUBST(SN_GUI_DIR)
 
 if test x${exec_prefix} = xNONE; then
-  SN_SDK_EXEC_PREFIX='${prefix}/share/sdk'
+  SN_SDK_EXEC_PREFIX=${prefix}/share/sdk
 else
-  SN_SDK_EXEC_PREFIX='${exec_prefix}/sdk'
+  SN_SDK_EXEC_PREFIX=${exec_prefix}/sdk
 fi
 AC_SUBST(SN_SDK_EXEC_PREFIX)
 
