--- a/snavigator/demo/Makefile.in
+++ b/snavigator/demo/Makefile.in
@@ -288,16 +288,16 @@ maintainer-clean
 
 
 install-data-local:
-	@$(mkinstalldirs) $(DESTDIR)$(demosdir)
+	@$(mkinstalldirs) $(demosdir)
 	echo CVS > /tmp/sn-install-$$$$ ; \
 	for p in @C_DEMO@ @ASM_DEMO@ @FOR_DEMO@ @COB_DEMO@ @MONOP_DEMO@ @JAV_DEMO@ ; do \
-	  echo "copying $$p to $(DESTDIR)$(demosdir)" ; \
+	  echo "copying $$p to $(demosdir)" ; \
 	  ( \
 	  cd $(srcdir) ; \
 	  $(TAR) -ch$(OLDTARFLAG) -f /tmp/$$p.tar-$$$$ -X /tmp/sn-install-$$$$ $$p ; \
-	  cp /tmp/$$p.tar-$$$$ $(DESTDIR)$(demosdir)/$$p.tar-$$$$ ; \
+	  cp /tmp/$$p.tar-$$$$ $(demosdir)/$$p.tar-$$$$ ; \
 	  rm /tmp/$$p.tar-$$$$ ; \
-	  cd $(DESTDIR)$(demosdir) ; \
+	  cd $(demosdir) ; \
 	  $(TAR) -xf $$p.tar-$$$$ ; \
 	  rm $$p.tar-$$$$ ; \
           ) \
